--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
@@ -316,7 +316,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2025 Las Mascotas - Todos los derechos reservados | Página creada por Juan Pérez</p>
+    <p>&copy; 2025 Las Mascotas - Todos los derechos reservados | Página creada por Nahomi L. Pérez</p>
 </footer>
 
 </body>
